Adding white paper

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
 					<li><a href="#how">How</a></li>
 					<li><a href="#acords">Acords</a></li>
 					<li><a href="#videos">Videos</a></li>
-					<li><a class target = "_tab" href="Web Site Files/Acord-Whitepaper.pdf">Read the Details</a></li>
+					<li><a class target = "_tab" href="./Acord-Whitepaper.pdf">Read the Details</a></li>
 					<li><a href="#casestudies">Case Studies</a></li>
 					<li><a href="#team">Team</a></li>
 				</ul>
